# urepricer

./: .coverage  .env.development.sample  .env.local  .env.production.sample  .env.test  Dockerfile  Dockerfile.dev  PRICE_VALIDATION_SUMMARY.md  README.md  STRATEGY_REFACTOR_SUMMARY.md  TEST_FIXES_SUMMARY.md  TRANSFER_SUMMARY.md  alembic.ini  analyze_test_categories.py  better_fixtures_example.py  clean_test_files.py  comprehensive_syntax_fix.py  create_working_tests.py  docker-compose.development.yml  docker-compose.production.yml  e2e.sh  extract_and_convert.py  extract_tests.py  final_syntax_fix.py  fix_syntax_errors.py  improve_test_quality.py  improved_test_example.py  pyproject.toml  run_e2e_tests.py  run_tests.py  split_and_implement_tests.py
alembic/: env.py
alembic/versions/: 0001_initial_migration.py
docs/: IMPROVEMENT_PLAN.md  INITIAL.md  QUICKSTART.md  QUICKSTART_DOCKER.md  README.md  REQUIREMENTS_STATUS.md  SERVICE_DATA_FLOWS.md  data_formats.md  system_architecture.md
docs/architecture/: system-overview.md
docs/business-logic/: AOC_SP_API.mmd  REDIS_STORAGE.mmd  pricing-strategies.md
docs/converted/: Repricer CD Commands.html  Repricer Conditional Mapping.html  Repricer Deployment.html  Repricer ELK Document.html  Repricer Models.html  Repricer Queues.html
docs/source/: Ah Repricer Outline 19.53.28.html  Funtional Specification Document (Repricer) .html  Future Development.html  Repricer Exception Handling.html  Repricer Sample Feeds.html  Repricer Strategy Properties Values.html
scripts/: __init__.py  localstack-init.sh  locust_load_test.py  populate_from_mysql.py  populate_test_data.py
src/: __init__.py  celery_app.py  containers.py  di_config.py  main.py
src/api/: webhook_endpoints.py  webhook_router.py
src/core/: auth.py  config.py  database.py  dependencies.py  logging.py
src/models/: __init__.py  accounts.py  feeds.py  listings.py  product.py  products.py
src/schemas/: __init__.py  accounts.py  feeds.py  listings.py  messages.py  repricing.py
src/services/: apply_strategy_service.py  error_handler.py  message_processor.py  redis_service.py  repricing_engine.py  repricing_orchestrator.py  sqs_consumer.py  update_product_service.py
src/strategies/: __init__.py  base_strategy.py  chase_buybox.py  maxmise_profit.py  new_price_processor.py  only_seller.py
src/tasks/: price_reset.py  set_competitor_info.py
src/utils/: exceptions.py  logging.py  price_reset_utils.py  reset_utils.py
tests/: README.md  __init__.py  conftest.py  conftest_e2e_fixtures.py  conftest_simple.py  test_competitor_analysis.py  test_comprehensive_repricing_e2e.py  test_e2e_fastapi_repricing.py  test_e2e_redis_integration.py  test_e2e_sqs_repricing.py  test_price_processing.py  test_price_reset_resume.py  test_price_validation.py  test_pricing_endpoints.py  test_strategies.py  test_strategies_fixed.py  test_strategy_price_bounds.py  test_uncategorized.py
tests/localstack/: 01_setup_sqs.sh
tests_original/: test_celery_tasks.py  test_feedsubmission_main.py  test_listing_main.py  test_manual_task_execution.py  test_maximise_profit_original.py  test_new_price_processor_original.py  test_only_seller_original.py  test_repricer_main.py  test_task_import.py
tests_original/authentication_django/: fixtures.py  test_any_offer_consumer.py  test_helpers.py  test_integration.py  test_models.py  test_redis_cache.py  test_redis_client.py  test_tasks.py
ui/urepricer_admin/: README.md  pubspec.yaml
ui/urepricer_admin/lib/: main.dart
ui/urepricer_admin/lib/models/: api_models.dart
ui/urepricer_admin/lib/screens/: admin_dashboard.dart
ui/urepricer_admin/lib/services/: api_service.dart
ui/urepricer_admin/lib/widgets/: sqs_message_dialog.dart
ui/urepricer_admin/test/: widget_test.dart
ui/urepricer_admin/web/: index.html  manifest.json
