[project]
name = "urepricer"
version = "0.1.0"
description = ""
authors = [
    {name = "l3acucm",email = "l3acucm@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "pydantic[email] (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "redis-om (>=0.3.5,<0.4.0)",
    "redis (>=3.5.3,<6.0.0)",
    "boto3 (>=1.40.28,<2.0.0)",
    "structlog (>=25.4.0,<26.0.0)",
    "locust (>=2.40.2,<3.0.0)",
    "prettytable (>=3.16.0,<4.0.0)",
    "pytest-asyncio (>=1.1.0,<2.0.0)",
    "fakeredis (>=2.31.1,<3.0.0)",
    "pytest-mock (>=3.15.0,<4.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "mysql-connector-python (>=9.1.0,<10.0.0)",
    "celery[redis] (>=5.5.3,<6.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
fakeredis = "^2.31.1"
pytest = "^8.4.2"
pytest-asyncio = "^1.1.0"
awscli-local = "^0.22.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html:htmlcov"
]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests", 
    "e2e: marks tests as end-to-end tests",
    "asyncio: marks tests as async tests",
]
filterwarnings = [
    "ignore::DeprecationWarning:pydantic.*",
    "ignore::DeprecationWarning:redis_om.*",
    "ignore:Monkey-patching ssl:UserWarning",
    "ignore:.*deprecated.*:DeprecationWarning", 
    "ignore:.*__fields__.*:DeprecationWarning",
    "ignore:.*allow_reuse.*:DeprecationWarning",
    "ignore:.*min_items.*:DeprecationWarning",
    "ignore:.*max_items.*:DeprecationWarning",
    "ignore:.*model_fields.*:DeprecationWarning",
    "ignore:.*Extra keys.*:DeprecationWarning",
    "ignore:.*class-based.*config.*:DeprecationWarning",
]
